--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -12,6 +12,7 @@ header {
   padding: 1rem;
   color: #fff;
   text-align: center;
+  margin-bottom: 1rem; /* Add margin bottom */
 }
 
 nav {
@@ -19,6 +20,7 @@ nav {
   padding: 1rem;
   display: flex;
   justify-content: center;
+  margin-bottom: 1rem; /* Add margin bottom */
 }
 
 
@@ -57,9 +59,11 @@ footer {
   color: #fff;
   text-align: center;
 }
+
 .icon {
   margin-right: 10px; 
 }
+
 
 @media (max-width: 768px) {
   main {
