--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,26 +1,31 @@
-/* App.css */
 .App {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   min-height: 100vh;
   background-color: #f7f7f7;
 }
 
 header {
+  flex: 1;
   background-color: #333;
   padding: 1rem;
   color: #fff;
   text-align: center;
-  margin-bottom: 1rem; /* Add margin bottom */
 }
 
 nav {
+  flex: 1;
   background-color: #555;
   padding: 1rem;
   display: flex;
   justify-content: center;
-  margin-bottom: 1rem; /* Add margin bottom */
+}
+
+main {
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  width: 100%;
+  margin: 2rem auto;
 }
 
 
@@ -39,11 +44,6 @@ nav ul li a {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-}
-
-main {
-  width: 80%;
-  margin: 2rem auto;
 }
 
 section {
