--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -6,11 +6,15 @@
 
 header {
   flex: 1;
-  background-color: #333;
+  background-color: #111d2c;
+  background-image: linear-gradient(to bottom, #111d2c, #0a192f 70%);
+  border-top: 4px solid #000;
   padding: 1rem;
   color: #fff;
   text-align: center;
 }
+
+
 
 nav {
   flex: 1;
